dark mode fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,6 +39,7 @@
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --plot-background: 0 0% 100%;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -75,7 +76,9 @@
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --plot-background: 0 0% 100%;
   }
+  .dark svg { --plot-background: black; }
 }
 
 @layer base {
@@ -86,3 +89,4 @@
     @apply bg-background font-sans text-foreground;
   }
 }
+
